# DocEval

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: CROSS_VERIFICATION.md  USAGE.md
src/doceval/: __init__.py  __main__.py  cli.py  config.py  devui_app.py
src/doceval/agents/: __init__.py  client.py  copilot.py  llm.py  verifier.py
src/doceval/consensus/: __init__.py  clustering.py  voting.py
src/doceval/core/: __init__.py  tokens.py  types.py
src/doceval/pipeline/: __init__.py  batch_workflow.py  evaluator.py  workflow.py
src/doceval/reporting/: __init__.py  annotator.py  markdown.py  summary.py
src/doceval/sources/: __init__.py  base.py  doc_intel.py  gpt_md_generator.py  markdown.py  ocr.py
src/doceval/utils/: __init__.py
src/intsig_eval/: __main__.py  config.py  devui_app.py
src/intsig_eval/agents/: client.py
src/intsig_eval/consensus/: __init__.py  clustering.py
src/intsig_eval/core/: __init__.py  normalize.py
src/intsig_eval/pipeline/: __init__.py  evaluator.py  workflow.py
src/intsig_eval/reporting/: annotator.py  markdown.py
src/intsig_eval/sources/: __init__.py  base.py  gpt_md_generator.py
src/intsig_eval/utils/: __init__.py  fonts.py
tests/: test_clustering.py  test_normalize.py  test_tokens.py  test_voting.py
